syntax = "proto3";

package Bench.Common;

service RpcService {
	rpc GetTimestamp (Empty) returns (Timestamp) {}
	rpc GetCounterJsonStr(Empty) returns (Strg) {}
	rpc GetState(Empty) returns (Stat) {}
	rpc LoadJobConfig (CellJobConfig) returns (Stat) {}
	rpc CreateWorker(Empty) returns (Stat) {}
	rpc CollectCounters(Force) returns (Dict) {}
	rpc RunJob(BenchmarkCellConfig) returns (Stat) {}
	rpc Test(Strg) returns (Stat) {}
	rpc LoadConnectionConfig(ConnectionConfigList) returns (Empty) {}
	rpc LoadConnectionRange(Range) returns(Empty) {}
}


message BenchmarkCellConfig {
	string serviceType = 1;
	string transportType = 2;
	string hubProtocol = 3;
	string scenario = 4;
	string step = 5;
	string mixGroupName = 6;
	int32 mixEchoConnection = 7;
	int32 mixBroadcastConnection = 8;
	int32 mixGroupConnection = 9;
}

message ConnectionConfig {
	string groupName = 1;
}

message ConnectionConfigList {
	repeated ConnectionConfig configs = 1;
}

message Range{
	int32 begin = 1;
	int32 end = 2;
}

message Force {
	bool force = 1;
}

message Pair {
   string key = 1;
   int32 value = 2;
}

message Dict {
   repeated Pair pairs = 1;
}

message Path {
	string ppath = 1;
}

message CellJobConfig {
	int32 connections = 1;
	int32 concurrentConnections = 2;
	int32 slaves = 3;
	int32 interval = 4;
	int32 duration = 5;
	string serverUrl = 6;
	string pipeline = 7;
}

message Stat {
	enum State {
		DEBUG_TODO = 0;
	
		HUBCONN_UNCONNECTED = 1;
		HUBCONN_CONNECTING = 2;
		HUBCONN_CONNECTED = 3;

		CONFIG_UNLOADED = 8;
		CONFIG_LOADING = 9;
		CONFIG_LOADED = 10;
		
		SEND_READY = 11;
		SEND_RUNNING = 12;
		SEND_COMPLETE = 13;

		WORKER_UNEXIST = 14;
		WORKER_CREATING = 15;
		WORKER_CREATED = 16;
		WORKER_EXISTED = 17;

		HUBCONN_UNCREATED = 18;
		HUBCONN_CREATING = 19;
		HUBCONN_CREATED = 20;

		HUBCONN_DISCONNECTING = 24;
		HUBCONN_DISCONNECTED = 25;
		HUBCONN_DISPOSING = 26;
		HUBCONN_DISPOSED = 27;
	}
	State state = 1; 
}

message Strg {
	string str = 1;
}

message Timestamp {
	uint64 time = 1;
}

message Empty {}